<resources>
    <string name="app_name">MoviesApp</string>
    <string name="SEARCH_MOVIE_URL">https://api.themoviedb.org/3/search/movie</string>
    <string name="SEARCH_POPULAR_MOVIE_URL">https://api.themoviedb.org/3/movie/</string>
    <string name="BASE_URL_IMAGE">http://image.tmdb.org/t/p/w185</string>
    <string name="KEY_MOVIE_DB">c4852d11798d35ebae996afb362875d4</string>
    <string name="KEY_YOUTUBE_API">AIzaSyD5q-0zjmhx24ZfWIAcfkSKt3z2z_FYOzY</string>

    <string name="LANGUAGE_VALUE">en-US</string>

    <string name="action_settings">Settings</string>

    <string name="api_key"> api_key</string>
    <string name="query">query</string>
    <string name="language"> language</string>

    <string name="movie_list_key">movieList</string>
    <string name="movie_sort">Movie Sort</string>

    <string name="popular_name">Popular</string>
    <string name="top_rated_name">Top Rated</string>
    <string name="favorite_movies_nome">Favorite Movies</string>

    <string name="popular_value">popular</string>
    <string name="top_rated_value">top_rated</string>
    <string name="favorite_movies_value">favorite_movies</string>


    <string name="error_listing_movies">Error listing Movies. Click here to reload!</string>
    <string name="error_listing_trailers">Error listing Trailers. Click here to reload!</string>
    <string name="reload_image">reload image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="enter_search_movie">Enter search movie</string>
    <string name="movie_image">movie image</string>
    <string name="see_only_favorites">See only favorites</string>
    <string name="movies_not_found">Movies not found!</string>
    <string name="trailers_not_found">Trailers not found!</string>
    <string name="trailer_url">http://www.youtube.com/watch?v=</string>
    <string name="videos">videos</string>
    <string name="trailers_info">Trailers:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
