<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/trailerNestedScrollView">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.challenge.brasil.claro.moviesapp.view.MovieDatailActivity">


        <ImageView
            android:id="@+id/movieImageDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@string/movie_image"
            android:paddingLeft="@dimen/margin_medium"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/local_movies" />

        <ImageView
            android:id="@+id/favoriteMovieDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:contentDescription="@string/favorite_movies_nome"
            android:paddingLeft="@dimen/margin_small"
            android:src="@android:drawable/star_off"
            app:layout_constraintLeft_toRightOf="@id/movieImageDetail"
            app:layout_constraintTop_toTopOf="@id/movieImageDetail" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_size_medium"
            android:textAppearance="?android:textAppearanceSmall"
            app:layout_constraintLeft_toLeftOf="@id/favoriteMovieDetail"
            app:layout_constraintTop_toBottomOf="@id/favoriteMovieDetail" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/movieImageDetail"
            tools:text="Movies Teste Search" />

        <TextView
            android:id="@+id/trailerInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_medium"
            android:text="@string/trailers_info"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintLeft_toLeftOf="@id/overview"
            app:layout_constraintTop_toBottomOf="@+id/overview" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailerRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:paddingLeft="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/trailerInfo"
            tools:visibility="visible" />

        <include
            android:id="@+id/trailerProgress"
            layout="@layout/view_progress"
            android:layout_width="@dimen/loading_margin"
            android:layout_height="@dimen/loading_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview" />

        <LinearLayout
            android:id="@+id/trailerAreaErro"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_card_erro_view"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_medium"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/overview"
            tools:visibility="gone">

            <ImageView
                android:layout_width="@dimen/load_img_size"
                android:layout_height="@dimen/load_img_size"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin_medium"
                android:contentDescription="@string/reload_image"
                android:src="@mipmap/ic_reload" />

            <TextView
                android:id="@+id/textTrailerMsgErroView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                tools:text="@string/error_listing_movies" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>