<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/favoriteMovieOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingLeft="@dimen/margin_small"
        android:paddingStart="@dimen/margin_small"
        android:contentDescription="@string/favorite_movies_nome"
        app:srcCompat="@android:drawable/btn_star_big_on"
        />

    <TextView
        android:id="@+id/favoriteMovieText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_only_favorites"
        app:layout_constraintTop_toTopOf="@+id/favoriteMovieOn"
        app:layout_constraintLeft_toRightOf="@id/favoriteMovieOn"
        android:layout_marginTop="@dimen/margin_minimum"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/yellow_icon"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="@dimen/margin_small"
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/favoriteMovieOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />


    <include
        android:id="@+id/progress"
        layout="@layout/view_progress"
        android:layout_width="@dimen/loading_margin"
        android:layout_height="@dimen/loading_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/areaErro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_card_erro_view"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        tools:visibility="gone">

        <ImageView
            android:layout_width="@dimen/load_img_size"
            android:layout_height="@dimen/load_img_size"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_big"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_big"
            android:layout_marginStart="@dimen/margin_medium"
            android:contentDescription="@string/reload_image"
            android:src="@mipmap/ic_reload" />

        <TextView
            android:id="@+id/textMsgErroView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            tools:text="@string/error_listing_movies" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>

